include/internal.hpp

void PlayerSetIsPlayingEventHandler(int32_t player_id,
                                    void (*callback)(bool is_playing));
void PlayerSetIsCompletedEventHandler(int32_t player_id,
                                      void (*callback)(bool is_completed));
void PlayerSetIsBufferingEventHandler(int32_t player_id,
                                      void (*callback)(bool is_buffering));
void PlayerSetVolumeEventHandler(int32_t player_id,
                                 void (*callback)(float volume));
void PlayerSetRateEventHandler(int32_t player_id, void (*callback)(float rate));
void PlayerSetPositionEventHandler(int32_t player_id,
                                   void (*callback)(int32_t position));
void PlayerSetDurationEventHandler(int32_t player_id,
                                   void (*callback)(int32_t duration));
void PlayerSetIndexEventHandler(int32_t player_id,
                                void (*callback)(int32_t index));
void PlayerNativeControlsCreate(int32_t player_id,
                                void (*callback)(int32_t button));
void PlayerNativeControlsSetStatus(int32_t player_id, int32_t status);
void PlayerNativeControlsUpdate(int32_t player_id, int32_t type, char** data,
                                const char* thumbnail);
void PlayerNativeControlsClear(int32_t player_id);
void PlayerNativeControlsDispose(int32_t player_id);
void MediaCreate(int32_t media_id, const char* uri, bool parse = false);
void MediaDispose(int32_t media_id);
int32_t MediaGetDuration(int32_t media_id);
char** TagsFromMusic(const char* uri);
char** TagsFromVideo(const char* uri);
void TagsExtractThumbnail(const char* media, const char* folder,
                          const char* file_name, int32_t mode, int32_t size);
void NativeControlsCreate(void (*callback)(int32_t button));
void NativeControlsSetStatus(int32_t status);
void NativeControlsUpdate(int32_t type, char** data, const char* thumbnail);
void NativeControlsClear();