flutter/lib/generated/bindings.dart


  late final _PlayerSetIsPlayingEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIsPlayingEventHandler>>(
          'PlayerSetIsPlayingEventHandler');
  late final _dart_PlayerSetIsPlayingEventHandler
      _PlayerSetIsPlayingEventHandler = _PlayerSetIsPlayingEventHandler_ptr
          .asFunction<_dart_PlayerSetIsPlayingEventHandler>();

  void PlayerSetIsCompletedEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_2>> callback,
  ) {
    return _PlayerSetIsCompletedEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetIsCompletedEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIsCompletedEventHandler>>(
          'PlayerSetIsCompletedEventHandler');
  late final _dart_PlayerSetIsCompletedEventHandler
      _PlayerSetIsCompletedEventHandler = _PlayerSetIsCompletedEventHandler_ptr
          .asFunction<_dart_PlayerSetIsCompletedEventHandler>();

  void PlayerSetIsBufferingEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_3>> callback,
  ) {
    return _PlayerSetIsBufferingEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetIsBufferingEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIsBufferingEventHandler>>(
          'PlayerSetIsBufferingEventHandler');
  late final _dart_PlayerSetIsBufferingEventHandler
      _PlayerSetIsBufferingEventHandler = _PlayerSetIsBufferingEventHandler_ptr
          .asFunction<_dart_PlayerSetIsBufferingEventHandler>();

  void PlayerSetVolumeEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_4>> callback,
  ) {
    return _PlayerSetVolumeEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetVolumeEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetVolumeEventHandler>>(
          'PlayerSetVolumeEventHandler');
  late final _dart_PlayerSetVolumeEventHandler _PlayerSetVolumeEventHandler =
      _PlayerSetVolumeEventHandler_ptr.asFunction<
          _dart_PlayerSetVolumeEventHandler>();

  void PlayerSetRateEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_5>> callback,
  ) {
    return _PlayerSetRateEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetRateEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetRateEventHandler>>(
          'PlayerSetRateEventHandler');
  late final _dart_PlayerSetRateEventHandler _PlayerSetRateEventHandler =
      _PlayerSetRateEventHandler_ptr.asFunction<
          _dart_PlayerSetRateEventHandler>();

  void PlayerSetPositionEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_6>> callback,
  ) {
    return _PlayerSetPositionEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetPositionEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetPositionEventHandler>>(
          'PlayerSetPositionEventHandler');
  late final _dart_PlayerSetPositionEventHandler
      _PlayerSetPositionEventHandler = _PlayerSetPositionEventHandler_ptr
          .asFunction<_dart_PlayerSetPositionEventHandler>();

  void PlayerSetDurationEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_7>> callback,
  ) {
    return _PlayerSetDurationEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetDurationEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetDurationEventHandler>>(
          'PlayerSetDurationEventHandler');
  late final _dart_PlayerSetDurationEventHandler
      _PlayerSetDurationEventHandler = _PlayerSetDurationEventHandler_ptr
          .asFunction<_dart_PlayerSetDurationEventHandler>();

  void PlayerSetIndexEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_8>> callback,
  ) {
    return _PlayerSetIndexEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetIndexEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIndexEventHandler>>(
          'PlayerSetIndexEventHandler');
  late final _dart_PlayerSetIndexEventHandler _PlayerSetIndexEventHandler =
      _PlayerSetIndexEventHandler_ptr.asFunction<
          _dart_PlayerSetIndexEventHandler>();

  void PlayerSetDownloadProgressEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_5>> callback,
  ) {
    return _PlayerSetDownloadProgressEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetDownloadProgressEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetDownloadProgressEventHandler>>(
          'PlayerSetDownloadProgressEventHandler');
  late final _dart_PlayerSetDownloadProgressEventHandler
      _PlayerSetDownloadProgressEventHandler =
      _PlayerSetDownloadProgressEventHandler_ptr.asFunction<
          _dart_PlayerSetDownloadProgressEventHandler>();

  void PlayerSetErrorEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_11>> callback,
  ) {
    return _PlayerSetErrorEventHandler(
      player_id,
      callback,
    );
  }

  late final _PlayerSetErrorEventHandler_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetErrorEventHandler>>(
          'PlayerSetErrorEventHandler');
  late final _dart_PlayerSetErrorEventHandler _PlayerSetErrorEventHandler =
      _PlayerSetErrorEventHandler_ptr.asFunction<
          _dart_PlayerSetErrorEventHandler>();

  void PlayerNativeControlsCreate(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_9>> callback,
  ) {
    return _PlayerNativeControlsCreate(
      player_id,
      callback,
    );
  }

  late final _PlayerNativeControlsCreate_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerNativeControlsCreate>>(
          'PlayerNativeControlsCreate');
  late final _dart_PlayerNativeControlsCreate _PlayerNativeControlsCreate =
      _PlayerNativeControlsCreate_ptr.asFunction<
          _dart_PlayerNativeControlsCreate>();

  void PlayerNativeControlsSetStatus(
    int player_id,
    int status,
  ) {
    return _PlayerNativeControlsSetStatus(
      player_id,
      status,
    );
  }

  late final _PlayerNativeControlsSetStatus_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerNativeControlsSetStatus>>(
          'PlayerNativeControlsSetStatus');
  late final _dart_PlayerNativeControlsSetStatus
      _PlayerNativeControlsSetStatus = _PlayerNativeControlsSetStatus_ptr
          .asFunction<_dart_PlayerNativeControlsSetStatus>();

  void PlayerNativeControlsUpdate(
    int player_id,
    int type,
    ffi.Pointer<ffi.Pointer<ffi.Utf8>> data,
    ffi.Pointer<ffi.Utf8> thumbnail,
  ) {
    return _PlayerNativeControlsUpdate(
      player_id,
      type,
      data,
      thumbnail,
    );
  }

  late final _PlayerNativeControlsUpdate_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerNativeControlsUpdate>>(
          'PlayerNativeControlsUpdate');
  late final _dart_PlayerNativeControlsUpdate _PlayerNativeControlsUpdate =
      _PlayerNativeControlsUpdate_ptr.asFunction<
          _dart_PlayerNativeControlsUpdate>();

  void PlayerNativeControlsClear(
    int player_id,
  ) {
    return _PlayerNativeControlsClear(
      player_id,
    );
  }

  late final _PlayerNativeControlsClear_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerNativeControlsClear>>(
          'PlayerNativeControlsClear');
  late final _dart_PlayerNativeControlsClear _PlayerNativeControlsClear =
      _PlayerNativeControlsClear_ptr.asFunction<
          _dart_PlayerNativeControlsClear>();

  void PlayerNativeControlsDispose(
    int player_id,
  ) {
    return _PlayerNativeControlsDispose(
      player_id,
    );
  }

  late final _PlayerNativeControlsDispose_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerNativeControlsDispose>>(
          'PlayerNativeControlsDispose');
  late final _dart_PlayerNativeControlsDispose _PlayerNativeControlsDispose =
      _PlayerNativeControlsDispose_ptr.asFunction<
          _dart_PlayerNativeControlsDispose>();

  void MediaCreate(
    int media_id,
    ffi.Pointer<ffi.Utf8> uri,
    bool parse,
  ) {
    return _MediaCreate(
      media_id,
      uri,
      parse ? 1 : 0,
    );
  }

  late final _MediaCreate_ptr =
      _lookup<ffi.NativeFunction<_c_MediaCreate>>('MediaCreate');
  late final _dart_MediaCreate _MediaCreate =
      _MediaCreate_ptr.asFunction<_dart_MediaCreate>();

  void MediaDispose(
    int media_id,
  ) {
    return _MediaDispose(
      media_id,
    );
  }

  late final _MediaDispose_ptr =
      _lookup<ffi.NativeFunction<_c_MediaDispose>>('MediaDispose');
  late final _dart_MediaDispose _MediaDispose =
      _MediaDispose_ptr.asFunction<_dart_MediaDispose>();

  int MediaGetDuration(
    int media_id,
  ) {
    return _MediaGetDuration(
      media_id,
    );
  }

  late final _MediaGetDuration_ptr =
      _lookup<ffi.NativeFunction<_c_MediaGetDuration>>('MediaGetDuration');
  late final _dart_MediaGetDuration _MediaGetDuration =
      _MediaGetDuration_ptr.asFunction<_dart_MediaGetDuration>();

  ffi.Pointer<ffi.Pointer<ffi.Int32>> TagsFromMusic(
    ffi.Pointer<ffi.Int32> uri,
  ) {
    return _TagsFromMusic(
      uri,
    );
  }

  late final _TagsFromMusic_ptr =
      _lookup<ffi.NativeFunction<_c_TagsFromMusic>>('TagsFromMusic');
  late final _dart_TagsFromMusic _TagsFromMusic =
      _TagsFromMusic_ptr.asFunction<_dart_TagsFromMusic>();

  ffi.Pointer<ffi.Pointer<ffi.Int32>> TagsFromVideo(
    ffi.Pointer<ffi.Int32> uri,
  ) {
    return _TagsFromVideo(
      uri,
    );
  }

  late final _TagsFromVideo_ptr =
      _lookup<ffi.NativeFunction<_c_TagsFromVideo>>('TagsFromVideo');
  late final _dart_TagsFromVideo _TagsFromVideo =
      _TagsFromVideo_ptr.asFunction<_dart_TagsFromVideo>();

  void TagsExtractThumbnail(
    ffi.Pointer<ffi.Int32> media,
    ffi.Pointer<ffi.Int32> folder,
    ffi.Pointer<ffi.Int32> file_name,
    int mode,
    int size,
  ) {
    return _TagsExtractThumbnail(
      media,
      folder,
      file_name,
      mode,
      size,
    );
  }

  late final _TagsExtractThumbnail_ptr =
      _lookup<ffi.NativeFunction<_c_TagsExtractThumbnail>>(
          'TagsExtractThumbnail');
  late final _dart_TagsExtractThumbnail _TagsExtractThumbnail =
      _TagsExtractThumbnail_ptr.asFunction<_dart_TagsExtractThumbnail>();

  void NativeControlsCreate(
    ffi.Pointer<ffi.NativeFunction<_typedefC_10>> callback,
  ) {
    return _NativeControlsCreate(
      callback,
    );
  }

  late final _NativeControlsCreate_ptr =
      _lookup<ffi.NativeFunction<_c_NativeControlsCreate>>(
          'NativeControlsCreate');
  late final _dart_NativeControlsCreate _NativeControlsCreate =
      _NativeControlsCreate_ptr.asFunction<_dart_NativeControlsCreate>();

  void NativeControlsSetStatus(
    int status,
  ) {
    return _NativeControlsSetStatus(
      status,
    );
  }

  late final _NativeControlsSetStatus_ptr =
      _lookup<ffi.NativeFunction<_c_NativeControlsSetStatus>>(
          'NativeControlsSetStatus');
  late final _dart_NativeControlsSetStatus _NativeControlsSetStatus =
      _NativeControlsSetStatus_ptr.asFunction<_dart_NativeControlsSetStatus>();

  void NativeControlsUpdate(
    int type,
    ffi.Pointer<ffi.Pointer<ffi.Utf8>> data,
    ffi.Pointer<ffi.Utf8> thumbnail,
  ) {
    return _NativeControlsUpdate(
      type,
      data,
      thumbnail,
    );
  }

  late final _NativeControlsUpdate_ptr =
      _lookup<ffi.NativeFunction<_c_NativeControlsUpdate>>(
          'NativeControlsUpdate');
  late final _dart_NativeControlsUpdate _NativeControlsUpdate =
      _NativeControlsUpdate_ptr.asFunction<_dart_NativeControlsUpdate>();

  void NativeControlsClear() {
    return _NativeControlsClear();
  }

  late final _NativeControlsClear_ptr =
      _lookup<ffi.NativeFunction<_c_NativeControlsClear>>(
          'NativeControlsClear');
  late final _dart_NativeControlsClear _NativeControlsClear =
      _NativeControlsClear_ptr.asFunction<_dart_NativeControlsClear>();
